# flux

./: .codecov.yml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  coverage.yml  linter.yml
cmake/: bootstrap.cmake  project_settings.cmake
cmake/modules/: FindCatch2.cmake  Findentt.cmake  Findfast_io.cmake  Findglad.cmake  Findglfw.cmake  Findglm.cmake  Findimgui.cmake
flux-config/: CMakeLists.txt
flux-config/flux/: config.hpp
flux-config/flux/config/: assert.hpp  compiler.hpp  features.hpp  graphics.hpp  macro.hpp  memory.hpp  platform.hpp  warnings.hpp
flux-foundation/: CMakeLists.txt
flux-foundation/flux/: foundation.hpp
flux-foundation/flux/foundation/: containers.hpp  memory.hpp  types.hpp  utility.hpp
flux-foundation/flux/foundation/containers/: from_range.hpp  static_vector-test.cpp  static_vector.hpp  vector-test.cpp  vector.hpp
flux-foundation/flux/foundation/memory/: align-test.cpp  align.hpp  allocate_at_least.hpp  allocation_result.hpp  allocator_storage-test.cpp  allocator_storage.hpp  allocator_traits.hpp  construct-test.cpp  construct.hpp  debugging.cpp  debugging.hpp  default_allocator.hpp  deleter.hpp  heap_allocator-test.cpp  heap_allocator.hpp  memory_arena-test.cpp  memory_arena.hpp  memory_block.hpp  memory_pool-test.cpp  memory_pool.hpp  memory_pool_list-test.cpp  memory_pool_list.hpp  memory_pool_type.hpp  memory_stack-test.cpp  memory_stack.hpp  relocate-test.cpp  relocate.hpp  static_allocator-test.cpp  static_allocator.hpp  std_allocator_adapter-test.cpp  std_allocator_adapter.hpp  temporary_allocator-test.cpp  temporary_allocator.cpp  temporary_allocator.hpp  threading.hpp  uninitialized_algorithms-test.cpp  uninitialized_algorithms.hpp  uninitialized_storage-test.cpp  uninitialized_storage.hpp
flux-foundation/flux/foundation/utility/: addressof.hpp  advance.hpp  distance.hpp  in_out_result.hpp  is_pointer_in_range.hpp  iterator_adapter-test.cpp  launder.hpp  (+8 more)
flux-io/: CMakeLists.txt
flux-io/flux/: io.hpp
flux-io/flux/io/: device.hpp  manipulators-test.cpp  manipulators.hpp  print-test.cpp  print.hpp
flux-logging/: CMakeLists.txt
flux-logging/flux/: logging.hpp
flux-logging/flux/logging/: logger.hpp
flux-meta/: CMakeLists.txt
flux-meta/flux/: meta.hpp
flux-meta/flux/meta/: compare.hpp  concepts.hpp  datasizeof.hpp  declval.hpp  integer.hpp  memcpyable.hpp  prvalue.hpp  relocatable.hpp  type_traits.hpp
flux-platform/: CMakeLists.txt
flux-playground/: CMakeLists.txt  playground.cpp
scripts/: generate-cmake-presets.ps1  generate-cmake-presets.sh
(+25 files in other folders)
